# finagent

./: .env.example  .gitignore  .pre-commit-config.yaml  BUILD-APK.bat  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  HOW-TO-USE.md  LICENSE  NOTICE  PROJECT.md  README.md  ROADMAP.md  SECURITY.md  START.bat  START.ps1  docker-compose.yml
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml
backend/: alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial.py  0002_holding_acquired.py
backend/scripts/: export_openapi.py  playwright_server.py
backend/src/finagent/: __init__.py  bootstrap.py  logging_setup.py  main.py
backend/src/finagent/agent/: __init__.py  loop.py  tools.py
backend/src/finagent/api/: auth.py  backtest.py  chat.py  market.py  settings.py
backend/src/finagent/backtest/: __init__.py
backend/src/finagent/brokers/: __init__.py  alpaca.py  angel.py  base.py  registry.py  stubs.py  zerodha.py
backend/src/finagent/config/: __init__.py  schema.py
backend/src/finagent/data/: __init__.py  base.py  ccxt_adapter.py  india_adapter.py  registry.py  yfinance_adapter.py
backend/src/finagent/db/: __init__.py  models.py
backend/src/finagent/llm/: __init__.py  catalog.py  ollama_runtime.py  pull_jobs.py  router.py
backend/src/finagent/notify/: __init__.py  dispatcher.py
backend/src/finagent/portfolio/: __init__.py  money.py  pnl.py
backend/src/finagent/scheduler/: __init__.py  jobs.py
backend/src/finagent/security/: __init__.py  log_redact.py  reauth.py  secrets.py  store.py  url_safety.py
backend/src/finagent/trading/: __init__.py  calendars.py  fno.py  orders.py  paper.py  persist.py
backend/tests/: conftest.py
backend/tests/e2e/: test_api_e2e.py
backend/tests/property/: test_fifo_properties.py
backend/tests/unit/: test_alpaca.py  test_angel.py  test_backtest.py  test_brokers_registry.py  test_config.py  test_llm_parse.py  test_market_batch.py  test_market_routing.py  test_money.py  test_more_trading.py  test_notify.py  test_ollama_runtime.py  test_paper.py  test_pnl_orders.py  test_pull_jobs.py  test_security_calendars_fno.py  test_zerodha.py
config/: config.example.yaml
docs/: android.md  index.md  mkdocs.yml  requirements.txt
docs/adr/: 0001-litellm.md  0002-custom-agent-loop.md  0003-decimal-money.md  0004-pwa-capacitor.md  0005-multi-user-households.md  index.md
docs/guides/: apk.md  backtesting.md  broker-plugins.md  installation.md  llm-setup.md  release.md  remote-access.md  tauri-desktop.md
frontend/: capacitor.config.json  capacitor.config.ts  eslint.config.js  index.html  openapi.json  package-lock.json  package.json  playwright.config.ts  tailwind.config.js  tsconfig.json  vite.config.ts
frontend/e2e/: README.md  a-z-desktop.spec.ts  helpers.ts  mobile-apk.spec.ts  smoke.spec.ts
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/api/: generated.ts  index.ts
frontend/src/components/: AppShell.tsx  CommandPalette.tsx  ErrorBoundary.tsx
frontend/src/components/chat/: ToolResultCards.tsx
frontend/src/components/llm/: LLMStudio.tsx
frontend/src/components/trading/: CandleChart.tsx  OptionChainPanel.tsx  OrderTicket.tsx  OrdersBlotter.tsx  PositionsPanel.tsx  SymbolHeader.tsx  WatchlistPanel.tsx
frontend/src/components/ui/: button.tsx  primitives.tsx  toast.tsx
frontend/src/lib/: api.test.ts  api.ts  chartMath.test.ts  chartMath.ts  marketStream.test.ts  marketStream.ts  native.ts  notify.test.ts  notify.ts  utils.test.ts  utils.ts
frontend/src/pages/: AutomationPage.tsx  ChatPage.tsx  DashboardPage.tsx  FnoPage.tsx  LoginPage.tsx  MarketsPage.tsx  PortfolioPage.tsx  SettingsPage.tsx  SetupWizardPage.tsx  TradingDeskPage.tsx  TradingPage.tsx
